# DM818-Mandatory-Assignment-2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  common.h  dm818_base_serial  dm818_serial  dm818_test  grid.py  grid.txt  mpi
SOURCES/other/: CMakeLists.txt  common.cpp  mpi.cpp  openmp.cpp  test_suite.cpp
SOURCES/other/visualize/: Makefile~  visualize  visualize.cpp
mpi-hopper/sources/: Makefile
mpi-other/results/: n4n1000.txt
mpi-other/source/: mpi.h
mpi-other/sources/: Makefile
openmp-other/: grid.cpp  grid.h
openmp-other/sources/: Makefile
report/: REPORT.tex  graph.ods  mpi_implementation.tex
serial-hopper/sources/: Makefile
serial-other/results/: n1000.txt  n3000.txt
serial-other/source/: serial.h  serial_base.cpp  serial_base.h
serial-other/sources/: Makefile  common.h
sources/hopper/: Makefile  common.cpp  grid.cpp  grid.cpp~  grid.h  grid.h~  mpi.cpp  openmp  openmp.cpp  pthread_barrier.h  pthreads  pthreads.cpp  serial  serial.cpp  serial.cpp~  serial.stdout  serial.txt
sources/hopper/mpi/: common.cpp  grid.h
sources/hopper/openMP/: Makefile
sources/hopper/pthreads/: Makefile  common.h  grid.cpp  pthread_barrier.c
sources/hopper/serial/: Makefile~
sources/hopper/visualize/: Makefile  visualize.cpp
sources/other/: CMakeLists.txt  Makefile  common.cpp  common.h  grid.cpp  grid.h  mpi.cpp  mpi.h  outputTime.txt  serial.cpp  serial.h  serial_base.cpp  serial_main.cpp  test_suite.cpp
sources/other/serial-other/: serial.cpp  serial_base_main.cpp
sources/other/visualize/: mpinew.txt  visualize.cpp
visualize/: CMakeCache.txt  serialnew.txt
